Integracion Logos y SCSS

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,2 +1,9 @@
 @import './reset';
-@import './typography'
+@import './typography';
+@import './header_bs';
+@import './carts_bs';
+@import 'footer_bs'
+
+
+
+
