--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,9 @@
 @import './typography';
 @import './header_bs';
 @import './carts_bs';
-@import 'footer_bs'
+@import 'footer_bs';
+@import 'StockList.scss';
+@import 'StockPreview.scss'
 
 
 
