Menu Lateral y BG de Stock Details

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,8 +4,9 @@
 @import './carts_bs';
 @import 'footer_bs';
 @import 'StockList.scss';
-@import 'StockPreview.scss'
-
+@import 'StockPreview.scss';
+@import 'StockDetail.scss';
+@import 'sideMenu.scss'
 
 
 
