Ajuste componente HOME y creacion de Questions,  Account y Contact

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,7 +6,8 @@
 @import 'StockList.scss';
 @import 'StockPreview.scss';
 @import 'StockDetail.scss';
-@import 'sideMenu.scss'
+@import 'sideMenu.scss';
+@import 'account.scss'
 
 
 
