--- a/src/styles/_footer_bs.scss
+++ b/src/styles/_footer_bs.scss
@@ -4,7 +4,9 @@ footer{
     border-bottom: solid 20px #812118;
     padding: 8px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items:center;
+    font-size: 12px;
 }
 footer img{
     width: 35px;
