--- a/src/styles/_header_bs.scss
+++ b/src/styles/_header_bs.scss
@@ -7,6 +7,9 @@ nav{
     background-color: black;
     color: white;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
 }
 
 a{
